Add allow proxy traffic in selinux if set

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,6 +9,8 @@ nginx_official_repo_mainline: False
 
 keep_only_specified: False
 
+nginx_proxy: False
+
 nginx_installation_type: "packages"
 nginx_binary_name: "nginx"
 nginx_service_name: "{{nginx_binary_name}}"
