--- a/tasks/selinux.yml
+++ b/tasks/selinux.yml
@@ -6,6 +6,13 @@
     - libsemanage-python
   when: ansible_os_family == "RedHat"
 
+- name: Rundeck | SELinux enable proxy traffic
+  seboolean:
+    name: httpd_can_network_connect
+    state: yes
+    persistent: yes
+  when: ansible_os_family == 'RedHat' and nginx_proxy
+
 - name: Install the selinux python module
   package: name={{ item }} state=present
   with_items:
